# Iris-Classifier-Microservice

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yaml
app/: main.py
app/api/: classifier.py  schemas.py
app/core/: config.py  model.py
app/training/: train.py
tests/: test_api.py  test_model_performance.py
